# job-application-tracker

./: .gitignore  .pre-commit-config.yaml  CONVENTIONS.md  LICENSE  MANIFEST.in  README.md  all_apps.csv  applications.db  jobapp.1  jobs_cli.py  pyproject.toml
.github/workflows/: tests.yml
jobapp/: __init__.py  cli.py  db.py  models.py
man/: jobapp.1  manpage.md
progress_reports/: nextsteps121025.md  progress121025.md
tests/: conftest.py  test_cli.py  test_db_basic.py
