[project]
name = "jobapp"
version = "0.1.0"
description = "A structured CLI tool for tracking job applications using SQLite."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sean Cohan", email = "svcohan@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

# This makes `jobapp` a real command-line tool
[project.scripts]
jobapp = "jobapp.cli:main"

# Optional metadata (recommended for professionalism)
[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/YOUR_REPO_NAME"
Source = "https://github.com/YOUR_GITHUB_USERNAME/YOUR_REPO_NAME"
Issues = "https://github.com/YOUR_GITHUB_USERNAME/YOUR_REPO_NAME/issues"

# ----------------------------------------------------------------------
# Build backend (standard modern Python packaging)
# ----------------------------------------------------------------------
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jobapp"]

# ----------------------------------------------------------------------
# Tooling Configuration (Optional but Highly Recommended)
# These sections are not required, but they impress hiring managers.
# ----------------------------------------------------------------------

# Ruff for linting
[tool.ruff]
select = ["E", "F", "W"]
ignore = []
line-length = 88
exclude = ["tests"]

# Black for formatting
[tool.black]
line-length = 88
target-version = ["py310"]

# Pytest config
[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"