[project]
name = "jobapp"
version = "0.1.0"
description = "A structured CLI tool for tracking job applications using SQLite."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sean Cohan", email = "svcohan@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

# This makes `jobapp` a real command-line tool
[project.scripts]
jobapp = "jobapp.cli:main"

[project.urls]
Homepage = "https://github.com/NoDancing/job-application-tracker"
Source = "https://github.com/NoDancing/job-application-tracker"
Issues = "https://github.com/NoDancing/job-application-tracker/issues"

# ----------------------------------------------------------------------
# Build backend (standard modern Python packaging)
# ----------------------------------------------------------------------
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jobapp"]

# Ruff for linting
[tool.ruff]
select = ["E", "F", "W"]
ignore = []
line-length = 88
exclude = ["tests"]

# Black for formatting
[tool.black]
line-length = 88
target-version = ["py310"]

# Pytest config
[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"