[project]
name = "jobapp"
version = "0.1.0"
description = "A structured CLI tool for tracking job applications using SQLite."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sean Cohan", email = "svcohan@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

# This makes `jobapp` a real command-line tool
[project.scripts]
jobapp = "jobapp.cli:main"

[project.urls]
Homepage = "https://github.com/NoDancing/job-application-tracker"
Source = "https://github.com/NoDancing/job-application-tracker"
Issues = "https://github.com/NoDancing/job-application-tracker/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.0.0",
]

# ----------------------------------------------------------------------
# Build backend (standard modern Python packaging)
# ----------------------------------------------------------------------
[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jobapp"]

# Ruff for linting and formatting
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # E/W: pycodestyle, F: pyflakes, I: isort
ignore = []

# Pytest config
[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

# Bandit security linting config
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B608"]  # B101: assert_used, B608: hardcoded_sql (false positive)
